--- a/css/standart.css
+++ b/css/standart.css
@@ -1,3 +1,34 @@
+body{
+  background-image: linear-gradient(to left top, #ffc914, #e88d3b, #b55f4a, #724145, #2e282a);
+  background-attachment: fixed;
+
+}
+.display-3 {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
+.bg-dark{
+  background-color: #283747 !important;
+}
+.card-header{
+  background: #283747;
+  color: #F3F3F3;
+}
+.card-body{
+  background: #F3F3F3;
+  color: #3C1874;
+}
+
+.list-group-item{
+  background: #F3F3F3;
+    color: #3C1874;
+}
+.list-group-item.active{
+    background-color: #283747;
+    border-color: #283747;
+}
+
 dot {
   position: absolute;
   height: 25px;
@@ -27,6 +58,7 @@ main{
 }
 img{
   width: 100%;
+    mix-blend-mode: multiply;
 }
 .imageexplaind img{
   z-index: -1;
@@ -40,9 +72,10 @@ img{
 }
 
 @keyframes dotcolor {
-  0% {background-color: red;}
-  50% {background-color: yellow;}
-  100% {background-color: red;}
+  0% {background-color: #DE354C;}
+  33% {background-color: #3C1874;}
+  66% {background-color: #283747;}
+  100% {background-color: #DE354C;}
 }
 .video-container {
     position: relative;
@@ -267,6 +300,9 @@ img{
 
 
 .container-p {
+  background: #0000004f;
+border-radius: 150px;
+box-shadow: 0px 0px 20px 20px #0000004f;
   }
   .progressbar {
       counter-reset: step;
@@ -284,27 +320,27 @@ img{
       position: relative;
       text-align: center;
       text-transform: uppercase;
-      color: #7d7d7d;
+      color: #F3F3F3 !important;
   }
   .progressbar li:before {
       width: 30px;
       height: 30px;
       content: counter(step);
       counter-increment: step;
-      line-height: 30px;
-      border: 2px solid #7d7d7d;
+      line-height: 26px;
+      border: 2px solid #932432;
       display: block;
       text-align: center;
       margin: 0 auto 10px auto;
       border-radius: 50%;
-      background-color: white;
+      background-color: #283747;
   }
   .progressbar li:after {
       width: 100%;
       height: 2px;
       content: '';
       position: absolute;
-      background-color: #7d7d7d;
+      background-color: #932432;
       top: 15px;
       left: -50%;
       z-index: -1;
@@ -316,8 +352,8 @@ img{
       color: green;
   }
   .progressbar li.active:before {
-      border-color: #55b776;
+      border-color: #DE354C;
   }
   .progressbar li.active + li:after {
-      background-color: #55b776;
+      background-color: #DE354C;
   }
